Added Functionality to the Golden Feather

--- a/src/config.yml
+++ b/src/config.yml
@@ -8,6 +8,7 @@
 options:
   enable-researching: true
   research-cost: 1
+  GoldenFeather-hunger-cost: 2
   auto-update: true
 items:
   NanoPickaxe: true
