--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: Slimefun
-version: 2.3
+version: 2.3-PRE
 author: mrCookieSlime
 website: http://dev.bukkit.org/profiles/mrCookieSlime/bukkit-plugins/
 
